@@ -7,6 +7,7 @@ v1.5 - Pending
 	+ Show untagged artists/genres in their respective library views
 	+ Allow DND of cover art from a web browser (Артем)
 	+ Allow DND of music from a file manager into playlist (requires mpd 0.14)
+	+ Preserve column percentages for current tab across window resizing
 	+ Switch back to last tab on second cover art click
 	+ Retain selection in lists after removing items
 	+ Hidden config option to expand notebook tabs (tabs_expanded)
